single product page, product details fetched with route params and graphql query

--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
     "start": "nuxt start",
     "export": "nuxt export",
     "serve": "nuxt serve",
-    "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "lint": "npm run lint:js",
-    "lintfix": "eslint --fix --ext .js,.vue --ignore-path .gitignore .",
+    "lint": "eslint --fix --ext .js,.jsx .",
     "build-possibleTypes": "node schemaQuery.js"
   },
   "dependencies": {
