--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@woocommerce/woocommerce-rest-api": "^1.0.1",
     "express": "^4.17.1",
     "graphql-tag": "^2.11.0",
+    "lodash.clonedeep": "^4.5.0",
     "nuxt": "^2.13.0"
   },
   "devDependencies": {
