--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
   },
   "dependencies": {
     "@nuxtjs/apollo": "^4.0.1-rc.4",
-    "@nuxtjs/axios": "^5.11.0",
+    "@nuxtjs/axios": "^5.12.5",
     "@woocommerce/woocommerce-rest-api": "^1.0.1",
     "express": "^4.17.1",
     "graphql-tag": "^2.11.0",
     "lodash.clonedeep": "^4.5.0",
-    "nuxt": "^2.13.0"
+    "nuxt": "^2.13.0",
+    "vue-content-placeholders": "^0.2.1"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^3.0.0",
